#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

import("//base/notification/ces_standard/event.gni")
import("//build/ohos.gni")

config("cesfwk_kits_test_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//utils/native/base/include",
    "//foundation/appexecfwk/standard/common/log/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include",
    "//foundation/appexecfwk/standard/services/bundlemgr/include",
    "//utils/system/safwk/native/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/ohos/aafwk/base",
    "//base/notification/ces_standard/cesfwk/innerkits/include",
    "//base/notification/ces_standard/cesfwk/services/include",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
  ]
}

ohos_shared_library("actscesfwk_kits_test") {
  sources = []

  configs = [ ":cesfwk_kits_test_config" ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  deps = [
    "//base/notification/ces_standard/cesfwk/innerkits:cesfwk_innerkits",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//base/notification/ces_standard/cesfwk/services:cesfwk_services",
    "//base/notification/ces_standard/common:libevent_common",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/appexecfwk/standard/services/bundlemgr:libbms",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
}
group("actsCEStest_ces") {
  testonly = true

  deps = [
    "actsCESCESpublishInfoTest:actsCESTest",
    "actsCESDataTest:actsCESTest",
    "actsCESManagertest:actsCESTest",
    "actsCESMatchingSkillsTest:actsCESTest",
    "actsCESSubscribeInfoTest:actsCESTest",
  ]
}
