# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "ces_standard/cesfwk/kits/native"

config("kits_natvie_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/standard/interfaces/innerkits/base/include/",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/services/abilitymgr/include/",
    "//foundation/appexecfwk/standard/services/bundlemgr/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/safwk/services/safwk/include",
    "//base/notification/ces_standard/cesfwk/innerkits/include",
    "//base/notification/ces_standard/cesfwk/kits/native/include",
    "//base/notification/ces_standard/cesfwk/services/include",
    "//base/notification/ces_standard/common/log/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
  ]

  cflags = []

  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_unittest("matching_skills_test") {
  module_out_path = module_output_path

  sources = [ "matching_skills_test.cpp" ]

  configs = [ ":kits_natvie_config" ]

  deps = [
    "//base/notification/ces_standard/cesfwk/innerkits:cesfwk_innerkits",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//base/notification/ces_standard/common:libevent_common",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [ "ipc:ipc_core" ]
}

ohos_unittest("common_event_subscribe_test") {
  module_out_path = module_output_path

  sources = [ "common_event_subscribe_test.cpp" ]

  configs = [ ":kits_natvie_config" ]

  deps = [
    "//base/notification/ces_standard/cesfwk/innerkits:cesfwk_innerkits",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//base/notification/ces_standard/cesfwk/services:cesfwk_services",
    "//base/notification/ces_standard/common:libevent_common",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [ "ipc:ipc_core" ]
}

ohos_unittest("common_event_unsubscribe_test") {
  module_out_path = module_output_path

  sources = [ "common_event_unsubscribe_test.cpp" ]

  configs = [ ":kits_natvie_config" ]

  deps = [
    "//base/notification/ces_standard/cesfwk/innerkits:cesfwk_innerkits",
    "//base/notification/ces_standard/cesfwk/kits/native:cesfwk_kits",
    "//base/notification/ces_standard/cesfwk/services:cesfwk_services",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]

  external_deps = [ "ipc:ipc_core" ]
}

group("unittest") {
  testonly = true
  deps = []

  deps += [
    ":common_event_subscribe_test",
    ":common_event_unsubscribe_test",
    ":matching_skills_test",
  ]
}
